cmake_minimum_required(VERSION 3.3)
project(LC3Tools)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    AshIDE/BreakpointWindow.cpp
    AshIDE/BreakpointWindow.h
    AshIDE/CallStackWindow.cpp
    AshIDE/CallStackWindow.h
    AshIDE/ConsoleWindow.cpp
    AshIDE/ConsoleWindow.h
    AshIDE/DataValuesWindow.cpp
    AshIDE/DataValuesWindow.h
    AshIDE/DisassemblyWindow.cpp
    AshIDE/DisassemblyWindow.h
    AshIDE/FilesWindow.cpp
    AshIDE/FilesWindow.h
    AshIDE/FileWindow.cpp
    AshIDE/FileWindow.h
    AshIDE/InstructionsWindow.cpp
    AshIDE/InstructionsWindow.h
    AshIDE/LC3bFileWindow.cpp
    AshIDE/LC3bFileWindow.h
    AshIDE/LC3FileWindow.cpp
    AshIDE/LC3FileWindow.h
    AshIDE/main.cpp
    AshIDE/MainWindow.cpp
    AshIDE/MainWindow.h
    AshIDE/MemoryBytesWindow.cpp
    AshIDE/MemoryBytesWindow.h
    AshIDE/MessageWindow.cpp
    AshIDE/MessageWindow.h
    AshIDE/OldLC3FileWindow.cpp
    AshIDE/OldLC3FileWindow.h
    AshIDE/ProgramsWindow.cpp
    AshIDE/ProgramsWindow.h
    AshIDE/Project.cpp
    AshIDE/Project.h
    AshIDE/ProjectLexer.cpp
    AshIDE/ProjectLexer.h
    AshIDE/ProjectParser.cpp
    AshIDE/ProjectParser.h
    AshIDE/ProjectToken.cpp
    AshIDE/ProjectToken.h
    AshIDE/ReadOnlyEditor.cpp
    AshIDE/ReadOnlyEditor.h
    AshIDE/RegistersWindow.cpp
    AshIDE/RegistersWindow.h
    AshIDE/SettingsWindow.cpp
    AshIDE/SettingsWindow.h
    AshIDE/SimulatorWindow.cpp
    AshIDE/SimulatorWindow.h
    AshIDE/TextEditor.cpp
    AshIDE/TextEditor.h
    AshIDE/WriteDataWindow.cpp
    AshIDE/WriteDataWindow.h
    AshIDE/WriteRegisterWindow.cpp
    AshIDE/WriteRegisterWindow.h
    AsmConvert2to3/AsmConvert2to3.cpp
    AsmConvertLC3/AsmConvertLC3.cpp
    AsmConvertLC3/AsmConvertLC3.h
    AsmConvertLC3/main.cpp
    Assembler/AsmLexer.cpp
    Assembler/AsmLexer.h
    Assembler/AsmParser.cpp
    Assembler/AsmParser.h
    Assembler/AsmToken.cpp
    Assembler/AsmToken.h
    Assembler/Assembler.cpp
    Assembler/Assembler.h
    Assembler/Base.cpp
    Assembler/Base.h
    Assembler/Data.cpp
    Assembler/Data.h
    Assembler/Disassembler.cpp
    Assembler/Disassembler.h
    Assembler/Element.cpp
    Assembler/Element.h
    Assembler/Expander.cpp
    Assembler/Expander.h
    Assembler/ISA.h
    Assembler/Label.cpp
    Assembler/Label.h
    Assembler/Number.cpp
    Assembler/Number.h
    Assembler/Program.cpp
    Assembler/Program.h
    Assembler/Segment.cpp
    Assembler/Segment.h
    Assembler/Symbol.cpp
    Assembler/Symbol.h
    Assembler/SymbolTable.cpp
    Assembler/SymbolTable.h
    EndianCheck/EndianCheck.cpp
    EndianCheck/EndianCheck.h
    EndianCheck/main.cpp
    fltk-1.1.10/FL/dirent.H
    fltk-1.1.10/FL/Enumerations.H
    fltk-1.1.10/FL/filename.H
    fltk-1.1.10/FL/Fl.H
    fltk-1.1.10/FL/Fl_Adjuster.H
    fltk-1.1.10/FL/fl_ask.H
    fltk-1.1.10/FL/Fl_Bitmap.H
    fltk-1.1.10/FL/Fl_BMP_Image.H
    fltk-1.1.10/FL/Fl_Box.H
    fltk-1.1.10/FL/Fl_Browser.H
    fltk-1.1.10/FL/Fl_Browser_.H
    fltk-1.1.10/FL/Fl_Button.H
    fltk-1.1.10/FL/Fl_Chart.H
    fltk-1.1.10/FL/Fl_Check_Browser.H
    fltk-1.1.10/FL/Fl_Check_Button.H
    fltk-1.1.10/FL/Fl_Choice.H
    fltk-1.1.10/FL/Fl_Clock.H
    fltk-1.1.10/FL/Fl_Color_Chooser.H
    fltk-1.1.10/FL/Fl_Counter.H
    fltk-1.1.10/FL/Fl_Dial.H
    fltk-1.1.10/FL/Fl_Double_Window.H
    fltk-1.1.10/FL/fl_draw.H
    fltk-1.1.10/FL/Fl_Export.H
    fltk-1.1.10/FL/Fl_File_Browser.H
    fltk-1.1.10/FL/Fl_File_Chooser.H
    fltk-1.1.10/FL/Fl_File_Icon.H
    fltk-1.1.10/FL/Fl_File_Input.H
    fltk-1.1.10/FL/Fl_Fill_Dial.H
    fltk-1.1.10/FL/Fl_Fill_Slider.H
    fltk-1.1.10/FL/Fl_Float_Input.H
    fltk-1.1.10/FL/Fl_FormsBitmap.H
    fltk-1.1.10/FL/Fl_FormsPixmap.H
    fltk-1.1.10/FL/Fl_Free.H
    fltk-1.1.10/FL/Fl_GIF_Image.H
    fltk-1.1.10/FL/Fl_Gl_Window.H
    fltk-1.1.10/FL/Fl_Group.H
    fltk-1.1.10/FL/Fl_Help_Dialog.H
    fltk-1.1.10/FL/Fl_Help_View.H
    fltk-1.1.10/FL/Fl_Hold_Browser.H
    fltk-1.1.10/FL/Fl_Hor_Fill_Slider.H
    fltk-1.1.10/FL/Fl_Hor_Nice_Slider.H
    fltk-1.1.10/FL/Fl_Hor_Slider.H
    fltk-1.1.10/FL/Fl_Hor_Value_Slider.H
    fltk-1.1.10/FL/Fl_Image.H
    fltk-1.1.10/FL/Fl_Input.H
    fltk-1.1.10/FL/Fl_Input_.H
    fltk-1.1.10/FL/Fl_Input_Choice.H
    fltk-1.1.10/FL/Fl_Int_Input.H
    fltk-1.1.10/FL/Fl_JPEG_Image.H
    fltk-1.1.10/FL/Fl_Light_Button.H
    fltk-1.1.10/FL/Fl_Line_Dial.H
    fltk-1.1.10/FL/Fl_Menu.H
    fltk-1.1.10/FL/Fl_Menu_.H
    fltk-1.1.10/FL/Fl_Menu_Bar.H
    fltk-1.1.10/FL/Fl_Menu_Button.H
    fltk-1.1.10/FL/Fl_Menu_Item.H
    fltk-1.1.10/FL/Fl_Menu_Window.H
    fltk-1.1.10/FL/fl_message.H
    fltk-1.1.10/FL/Fl_Multi_Browser.H
    fltk-1.1.10/FL/Fl_Multi_Label.H
    fltk-1.1.10/FL/Fl_Multiline_Input.H
    fltk-1.1.10/FL/Fl_Multiline_Output.H
    fltk-1.1.10/FL/Fl_Nice_Slider.H
    fltk-1.1.10/FL/Fl_Object.H
    fltk-1.1.10/FL/Fl_Output.H
    fltk-1.1.10/FL/Fl_Overlay_Window.H
    fltk-1.1.10/FL/Fl_Pack.H
    fltk-1.1.10/FL/Fl_Pixmap.H
    fltk-1.1.10/FL/Fl_PNG_Image.H
    fltk-1.1.10/FL/Fl_PNM_Image.H
    fltk-1.1.10/FL/Fl_Positioner.H
    fltk-1.1.10/FL/Fl_Preferences.H
    fltk-1.1.10/FL/Fl_Progress.H
    fltk-1.1.10/FL/Fl_Radio_Button.H
    fltk-1.1.10/FL/Fl_Radio_Light_Button.H
    fltk-1.1.10/FL/Fl_Radio_Round_Button.H
    fltk-1.1.10/FL/Fl_Repeat_Button.H
    fltk-1.1.10/FL/Fl_Return_Button.H
    fltk-1.1.10/FL/Fl_RGB_Image.H
    fltk-1.1.10/FL/Fl_Roller.H
    fltk-1.1.10/FL/Fl_Round_Button.H
    fltk-1.1.10/FL/Fl_Round_Clock.H
    fltk-1.1.10/FL/Fl_Scroll.H
    fltk-1.1.10/FL/Fl_Scrollbar.H
    fltk-1.1.10/FL/Fl_Secret_Input.H
    fltk-1.1.10/FL/Fl_Select_Browser.H
    fltk-1.1.10/FL/Fl_Shared_Image.H
    fltk-1.1.10/FL/fl_show_colormap.H
    fltk-1.1.10/FL/fl_show_input.H
    fltk-1.1.10/FL/Fl_Simple_Counter.H
    fltk-1.1.10/FL/Fl_Single_Window.H
    fltk-1.1.10/FL/Fl_Slider.H
    fltk-1.1.10/FL/Fl_Spinner.H
    fltk-1.1.10/FL/Fl_Sys_Menu_Bar.H
    fltk-1.1.10/FL/Fl_Tabs.H
    fltk-1.1.10/FL/Fl_Text_Buffer.H
    fltk-1.1.10/FL/Fl_Text_Display.H
    fltk-1.1.10/FL/Fl_Text_Editor.H
    fltk-1.1.10/FL/Fl_Tile.H
    fltk-1.1.10/FL/Fl_Tiled_Image.H
    fltk-1.1.10/FL/Fl_Timer.H
    fltk-1.1.10/FL/Fl_Toggle_Button.H
    fltk-1.1.10/FL/Fl_Toggle_Light_Button.H
    fltk-1.1.10/FL/Fl_Toggle_Round_Button.H
    fltk-1.1.10/FL/Fl_Tooltip.H
    fltk-1.1.10/FL/Fl_Valuator.H
    fltk-1.1.10/FL/Fl_Value_Input.H
    fltk-1.1.10/FL/Fl_Value_Output.H
    fltk-1.1.10/FL/Fl_Value_Slider.H
    fltk-1.1.10/FL/Fl_Widget.H
    fltk-1.1.10/FL/Fl_Window.H
    fltk-1.1.10/FL/Fl_Wizard.H
    fltk-1.1.10/FL/Fl_XBM_Image.H
    fltk-1.1.10/FL/Fl_XPM_Image.H
    fltk-1.1.10/FL/forms.H
    fltk-1.1.10/FL/gl.H
    fltk-1.1.10/FL/gl2opengl.H
    fltk-1.1.10/FL/gl_draw.H
    fltk-1.1.10/FL/glu.H
    fltk-1.1.10/FL/glut.H
    fltk-1.1.10/FL/mac.H
    fltk-1.1.10/FL/math.H
    fltk-1.1.10/FL/names.H
    fltk-1.1.10/FL/win32.H
    fltk-1.1.10/FL/x.H
    JMTLib/HighlightLexer.cpp
    JMTLib/HighlightLexer.h
    JMTLib/JMTLib.cpp
    JMTLib/JMTLib.h
    JMTLib/JMTSys.h
    JMTLib/Lexer.cpp
    JMTLib/Lexer.h
    JMTLib/SparseArray.h
    JMTLib/SynchLib.h
    JMTLib/Token.cpp
    JMTLib/Token.h
    LC3Assembler/AsmUI.cpp
    LC3Assembler/AsmUI.h
    LC3Assembler/LC3ISA.cpp
    LC3Assembler/LC3ISA.h
    LC3Assembler/main.cpp
    LC3bAssembler/AsmUI.cpp
    LC3bAssembler/AsmUI.h
    LC3bAssembler/LC3bISA.cpp
    LC3bAssembler/LC3bISA.h
    LC3bAssembler/main.cpp
    LC3bSimulator/LC3bArch.cpp
    LC3bSimulator/LC3bArch.h
    LC3bSimulator/main.cpp
    LC3bSimulator/SimUI.cpp
    LC3bSimulator/SimUI.h
    LC3Simulator/LC3Arch.cpp
    LC3Simulator/LC3Arch.h
    LC3Simulator/main.cpp
    LC3Simulator/SimUI.cpp
    LC3Simulator/SimUI.h
    Simulator/Architecture.cpp
    Simulator/Architecture.h
    Simulator/Memory.cpp
    Simulator/Memory.h
    Simulator/Pipeline.cpp
    Simulator/Pipeline.h
    Simulator/Register.cpp
    Simulator/Register.h
    Simulator/Simulator.cpp
    Simulator/Simulator.h
    Test/Test.cpp
    Test/Test2.cpp
    makefile
    README)

add_executable(LC3Tools ${SOURCE_FILES})